modified padding on popular posts to fix alignment

--- a/style.css
+++ b/style.css
@@ -474,7 +474,7 @@ a:active {
 .popular-posts ul li {
 	float: left;
 	width: 100%;
-	padding: 0.875em 0 0 0.875em; /* 14px / 16px */
+	padding: 0.4375em 0 0.4375em 0; /* 7px / 16px */
 	display: block;
 }
 
